@@ -1,0 +1,8 @@
+Subject: List packaged patches for VERSION in patchlevel.h
+Origin: vendor
+Bug-Debian: http://bugs.debian.org/567489
+
+The list can be refreshed from information in debian/patches by running
+'debian/rules refresh-patchlevel'.
+
+
